Version history of the R genetic analysis package (R/gap)

Version 1.2.3-2
24-04-2021	Enable fig=TRUE in gap.Rnw to generate figures/reduce size of the package
23-04-2021	Revise gsmr() adding legend and Egger intercept
		Add cnvplot() trunc.mhtplot, and METAL_forestplot examples to gap.Rnw

Version 1.2.3-1
21-04-2021	Remove URL from hwe.cc.Rd and http --> https in CITATION

Version 1.2.3
20-04-2021	Remove (unused) # ftp:// from asplot after suggestion
19-04-2021	Revise log10pvalue() and mhtplot.trunc() on p values
17-04-2021	Simplify pvalue()
16-04-2021	Change arguments for qnorm() and fix a swapped UCL/LCL bug in gsmr()
14-04-2021	Add log10pvalue so as to enable mhtplot.trunc() to handle p, log10p, z
11-04-2021	Rework on mhtplot.trunc() to use Z so as to handle extremely small p values
		Drop qqman from suggests
10-04-2021	Relocate description on lsf.str() as Appendix and add library(gap) in gap.Rnw
09-04-2021	Add weighted.median(), mr.boot(), gsmr() which suggests metafor, ggplot2 & cowplot
31-03-2021	Revise ESplot to use log(OR) as effect size, activate (...) option
22-03-2021	Add example for miamiplot in gap.Rnw
12-02-2021	Revise circos.cnvplot() excluding records with start>end
11-02-2021	Revise METAL_forestplot()
19-01-2021	Revise cs() to give the correct list of variants
10-01-2021	Revise ESplot() and therefore the vignette from Wendi's problem
20-10-2020	Add pvalue() to complement log10p()
05-08-2020	Fix issues in chr_pos_a1_a2() with vector input and suggest R/genetics
28-04-2020	Change colors for cis/trans signals in circos.cis.vs.trans.plot()
22-02-2020	Add bat data example for MCMCgrm on a query from Shengjing Song <songsj455@nenu.edu.cn>
		Merge d3json() to mhtplot3d(), drop the template, regress and suggest plotly
19-02-2020	Add details on N to METAL_forestplot.Rd due to query/flag of a typo
		from Savita Karthikeyan <sk752@medschl.cam.ac.uk>
09-02-2020	Revise return values for mhtplot2d as id,chr1,pos1,chr2,pos2,x,y,log10p,target,gene,col
