@@ -1,6 +1,6 @@
 Package: gap
 Version: 1.2.3-2
-Date: 2021-5-3
+Date: 2021-5-4
 Title: Genetic Analysis Package
 Author: Jing Hua Zhao and colleagues with inputs from Kurt Hornik and
         Brian Ripley
@@ -11,7 +11,7 @@ Depends: R (>= 2.10)
 Suggests: BradleyTerry2, MASS, Matrix, MCMCglmm, R2jags, bdsmatrix,
         calibrate, circlize, coda, cowplot, coxme, dplyr, foreign, forestplot,
         gap.datasets, genetics, ggplot2, grid, haplo.stats, jsonlite, kinship2,
-        lattice, magic, matrixStats, meta, metafor, mets, nlme, pedigree,
+        knitr, lattice, magic, matrixStats, meta, metafor, mets, nlme, pedigree,
         pedigreemm, plotly, plotrix, reshape, rmeta, rms, survival
 LazyData: Yes
 LazyLoad: Yes
