@@ -79,7 +79,7 @@ ab                      Test/Power calculation for mediating effect
 b2r                     Obtain correlation coefficients and their variance-covariances
 chow.test               Chow's test for heterogeneity in two regressions
 chr_pos_a1_a2           Form SNPID from chromosome, posistion and alleles
-cis.vs.trans.classification a cis/trans classifier
+cis.vs.trans.classification A cis/trans classifier
 comp.score              score statistics for testing genetic linkage of quantitative trait
 GRM functions           ReadGRM, ReadGRMBin, ReadGRMPLINK, ReadGRMPCA, WriteGRM, WriteGRMBin, WriteGRMSAS
                         handle genomic relationship matrix involving other software
